@@ -57,6 +57,10 @@ char * replace_home_part(const char path[]);
 /* Same as replace_home_part(), but doesn't perform trailing slash trimming. */
 char * replace_home_part_strict(const char path[]);
 
+/* Same as replace_home_part_strict(), but always returns a newly allocated
+ * string if memory allocation was successful. */
+char * make_tilde_path(const char path[]);
+
 /* Expands tilde in the front of the path.  Does nothing for paths without
  * tilde.  Returns newly allocated string without tilde. */
 char * expand_tilde(const char path[]);
